tests/parser-test-files/bad-files/parse-break.2.coal
;; BAD: Parse-Break
(package test-parser)

(define f
  (while :x True (break :y)))
